--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database connection with the given database name/
-spring.datasource.url = jdbc:mysql://localhost:3306/rentacar?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3306/rentacar?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&createDatabaseIfNotExist=true
 
 # Username and password
 spring.datasource.username = root
