--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,11 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>1.5.10.RELEASE</version>
+        </dependency>
     </dependencies>
 
 	<build>
