--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,11 @@ spring.thymeleaf.cache = false
 
 # Run Spring Boot on a different port
 server.port = 8000
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=denismen000000@gmail.com
+spring.mail.password=denis10011110
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
