--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,10 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>1.5.10.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
 	<build>
