--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ server.port = 8000
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${username}
+spring.mail.username=denismen000000@gmail.com
 spring.mail.password=${password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
