--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.lom-hospital</groupId>
-	<artifactId>medicine</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<groupId>com.rentauto-sofia</groupId>
+	<artifactId>rentacar</artifactId>
+	<version>0.0.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>medicine</name>
