--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,9 @@ spring.mail.password=${password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
+
+
+paypal.mode=sandbox
+paypal.client.app = AdeZf-_k1PGta8s2-AMuqy8HiL7cQQhqwGazCSLdmErR8k7h8WpjiBXjst_lmPGxaBwsJ_2r-edsnISa
+paypal.client.secret = EMM5kw1zvr6dxOqo7Yhl_ENEJY2NhKUkKIO5neL10zFFGEaThu5Zm0HlvFIcrwSNL-j4jTqMSha6ydq5
+
